@@ -1,0 +1,64 @@
+/* XPM */
+static const char *const playimage_xpm[] = {
+"16 16 44 1 0 0",
+"  c #8F8F8F",
+"! c #797979",
+"# c #787878",
+"$ c #7B7B7B",
+"% c #7C7C7C",
+"& c #929292",
+"' c #9F9F9F",
+"( c #F1F1F1",
+") c #FFFFFF",
+"* c #FDFDFD",
+"+ c #8D8D8D",
+", c #C4C4C4",
+"- c #CBCBCB",
+". c #FCFCFC",
+"/ c #959595",
+"0 c #FEFEFE",
+"1 c #404040",
+"2 c #D1D1D1",
+"3 c #292828",
+"4 c #4A4A4A",
+"5 c #343434",
+"6 c #5C5C5C",
+"7 c #565656",
+"8 c #474646",
+"9 c #656564",
+": c #696968",
+"; c #595959",
+"< c #4F4F4E",
+"= c #676766",
+"> c #A2A19F",
+"? c #8E8D8B",
+"@ c #4F4E4E",
+"A c #92918F",
+"B c #C3C2BF",
+"C c #585857",
+"D c #8E8E8E",
+"E c #414040",
+"F c #BAB8B5",
+"G c #151414",
+"H c #3F3F3E",
+"I c #676665",
+"J c #FBFBFB",
+"K c #0A0A0A",
+"L c None",
+"LLLLL     LLLLLL",
+"LLL  !###!  LLLL",
+"LL $#%&'&%#$ LLL",
+"L $#'()))('#$ LL",
+"L #'*)))))*'#+LL",
+" !%()))*)))(%! L",
+" #&))), -)))&# L",
+" #')). #/0)1'# L",
+" #&)))-/2))34# L",
+" !%()))0)))567 L",
+"L #'*)))))*89:;L",
+"L $#'()))('<=>?6",
+"LL $#%&'&%#@ABCL",
+"LLL +!###!DEFGLL",
+"LLLLL     LHIJLL",
+"LLLLLLLLLLLKLLLL"
+};
