@@ -651,7 +651,10 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_FilterFontBitmap "Bitmap fonts (*.desc)"
 #define MSGTR_GUI_FilterFontTTF "TrueType fonts (*.ttf)"
 #define MSGTR_GUI_FilterFontType1 "Type1 fonts (*.pfb)"
+#define MSGTR_GUI_FilterImageCD "CD image cue sheet"
 #define MSGTR_GUI_FilterImageCue "CD/VCD/SVCD image cue sheet"
+#define MSGTR_GUI_FilterImageDVD "DVD image/copy"
+#define MSGTR_GUI_FilterImageVCD "VCD/SVCD image cue sheet"
 #define MSGTR_GUI_FilterMediumMatroska "Matroska media"
 #define MSGTR_GUI_FilterMediumOgg "Ogg media"
 #define MSGTR_GUI_FilterMediumQuickTime "QuickTime media"
@@ -680,6 +683,7 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_FrontRight "Front right"
 #define MSGTR_GUI_HideVideoWindow "Hide video window after playing"
 #define MSGTR_GUI_Hue "Hue"
+#define MSGTR_GUI_Image "Image"
 #define MSGTR_GUI_Information "Information"
 #define MSGTR_GUI_Lavc "lavc (realtime mpeg1 encoding)"
 #define MSGTR_GUI_MaximumUsageSpareCPU "Maximum usage of spare CPU time"
@@ -785,6 +789,7 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_SelectedFiles "Selected files"
 #define MSGTR_GUI_SelectFile "Select file"
 #define MSGTR_GUI_SelectFont "Select font"
+#define MSGTR_GUI_SelectImage "Select image"
 #define MSGTR_GUI_SelectSubtitle "Select subtitle"
 #define MSGTR_GUI_SizeDouble "Double size"
 #define MSGTR_GUI_SizeFullscreen "Fullscreen"
