@@ -56,6 +56,8 @@ MPlayer
     * GUI now officially needs GTK+ and GLib versions 2 (it hadn't compiled
       with versions 1 for quite some time)
     * Support for audio and video bin/cue image playback
+    * Support for Audio CD / (Super) Video CD / DVD image and DVD copy playback
+      through the respective scheme (cd://, vcd://, dvd://)
 
   1.1: "We gave up on 1.0"
 
